# simple_api_router

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  TASK.md  config.yaml  main.py  pyproject.toml  requirements.txt
mock_api/: __init__.py  server.py
router/: __init__.py  app.py  config.py  converter.py  endpoint.py  group.py  logger.py  retry.py  usage.py
scripts/: service.sh
simple_api_router/: __init__.py  __main__.py  app.py  auto_config.py  cli.py  config.py  converter.py  converter_google.py  converter_openai.py  converter_responses.py  converter_utils.py  debug_log.py  image_cache.py  logger.py  mcp_media.py  mcp_vision.py  proxy.py  service.py  test_model.py  token_count.py  usage_cli.py  usage_db.py  usage_logger.py  web_ui.py
simple_api_router/static/css/: config.css  stats.css
simple_api_router/static/js/: config-monaco.js  config.js  stats.js
simple_api_router/templates/: config.html  macros.html  stats.html
tests/: __init__.py  test_converter.py  test_debug_log.py  test_edge_cases.py  test_midstream_system.py  test_proxy.py  test_qa_round2.py  test_qa_round3.py  test_router.py  test_scenarios.py  test_token_count.py
